# blog

./: .gitignore  README.md  alembic.ini  pipline.md  pyproject.toml  requirements.txt  run.py
docs/: 01-overview.md  02-run-and-env.md  03-source-structure.md  04-menu-ia.md  05-workflow.md  06-change-guide.md  README.md  USER_GUIDE.md
docs/archive/: COMMERCIAL_DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN.md  HANDOFF_2026-02-27.md  HANDOFF_2026-02-28.md  HANDOFF_2026-03-07_WRITER_REVIEW.md  IMPLEMENTATION_PLAN.md
docs/menus/: 01-dashboard.md  02-keyword.md  03-collect.md  04-label.md  05-writer.md  06-publish.md  07-monitor.md  README.md
docs/operations/: RELEASE_CHECKLIST.md  SENSITIVE_DATA_POLICY.md  WEB_SHELL_E2E_SMOKE.md
docs/plans/: KEYWORD_ENGINE_EXPANSION_PLAN.md  NAVER_BLOG_PUBLISH_ADAPTER_DESIGN.md  NAVER_BLOG_PUBLISH_NEXT_STEP.md  PUBLISH_AUTO_REPEAT_PLAN.md  REPACK_MENU_PLAN.md  WRITER_BODY_AND_IMAGE_REFACTOR_PLAN.md
docs/v1/: labeling_plan.md  overview.md  persona_and_template_plan.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_collection_tables.py  0003_label_tables.py  0004_generated_articles.py  0005_publish_jobs.py  0006_channel_settings_and_image_source.py  0007_publish_channels_and_api_url.py  0008_personas_and_templates.py  0009_persona_details_and_ai_providers.py  0010_related_keywords.py  0011_localize_label_values_ko.py  0012_drop_keyword_related_blocks.py  0013_add_raw_content_body_html.py  0014_add_keyword_seo_profiles.py  0015_expand_label_fields.py  (+1 more)
scripts/: webshell_e2e_smoke.py
src/: app.py
src/core/: __init__.py  (+5 more)
(+75 files in other folders)
