[project]
name = "blogwriter"
version = "0.1.0"
description = "Desktop content collector/writer/publisher"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.8.0",
  "SQLAlchemy>=2.0.36",
  "alembic>=1.14.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "beautifulsoup4>=4.12.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
