[project]
name = "mublo-ops"
version = "0.1.0"
description = "Mublo content operations desktop app"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.8.0",
  "SQLAlchemy>=2.0.36",
  "alembic>=1.14.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "beautifulsoup4>=4.12.3",
  "selenium>=4.29.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
